--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
                 <div class="songItem">
                     <img alt="cover">
                     <span class="songName">Jab saiyaan-Shreya Ghoshal </span> 
-                    <span class="songListPlay"><span class="timestamp"> 4.02 <i id="1" class="fa-solid songItemPlay fa-circle-play"></i> </span></span>
+                    <span class="songListPlay"><span class="timestamp"> 4.02 </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="cover">
                     <span class="songName">Jab saiyaan-Shreya Ghoshal </span> 
-                    <span class="songListPlay"><span class="timestamp"> 5.53 <i id="2" class="fa-solid songItemPlay fa-circle-play"></i> </span></span>
+                    <span class="songListPlay"><span class="timestamp"> 5.53  </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="cover">
                     <span class="songName">Jab saiyaan-Shreya Ghoshal </span> 
-                    <span class="songListPlay"><span class="timestamp"> 4.42 <i id="3" class="fa-solid songItemPlay fa-circle-play"></i> </span></span>
+                    <span class="songListPlay"><span class="timestamp"> 4.42  </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="cover">
                     <span class="songName">Jab saiyaan-Shreya Ghoshal </span> 
-                    <span class="songListPlay"><span class="timestamp"> 4.22 <i id="4" class="fa-solid songItemPlay fa-circle-play"></i> </span></span>
+                    <span class="songListPlay"><span class="timestamp"> 4.22  </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="cover">
                     <span class="songName">Jab saiyaan-Shreya Ghoshal </span> 
-                    <span class="songListPlay"><span class="timestamp"> 3.00 <i id="5" class="fa-solid songItemPlay fa-circle-play"></i> </span></span>
+                    <span class="songListPlay"><span class="timestamp"> 3.00  </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="cover">
                     <span class="songName">Jab saiyaan-Shreya Ghoshal </span> 
-                    <span class="songListPlay"><span class="timestamp"> 1.43 <i id="6" class="fa-solid songItemPlay fa-circle-play"></i> </span></span>
+                    <span class="songListPlay"><span class="timestamp"> 1.43  </span></span>
                 </div>
             </div>
         </div>
