--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
         <div class="rightnav">
             <ul>
-                <li>Premium</li>
-                <li>Support</li>
-                <li>Downloads</li>
-                <li>|</li>
+                <!-- <li>Premium</li>
+                <li>About</li>
+                <li>|</li> -->
                 <li>Sign up</li>
                 <li>Log in</li>
             </ul>
